crates/formatter/tests/snapshots/snapshots__synapse__main__delta__92__08_room_ban_redactions.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
--
-- This file is licensed under the Affero General Public License (AGPL) version 3.
--
-- Copyright (C) 2025 New Vector, Ltd
--
-- This program is free software: you can redistribute it and/or modify
-- it under the terms of the GNU Affero General Public License as
-- published by the Free Software Foundation, either version 3 of the
-- License, or (at your option) any later version.
--
-- See the GNU Affero General Public License for more details:
-- <https://www.gnu.org/licenses/agpl-3.0.html>.

create table room_ban_redactions (
	room_id text not null,
	user_id text not null,
	redacting_event_id text not null,
	redact_end_ordering bigint default null, -- stream ordering after which redactions are not applied
	constraint room_ban_redaction_uniqueness unique (room_id, user_id)
);
