crates/formatter/tests/snapshots/snapshots__synapse__main__delta__92__09_thread_subscriptions_update.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
--
-- This file is licensed under the Affero General Public License (AGPL) version 3.
--
-- Copyright (C) 2025 New Vector, Ltd
--
-- This program is free software: you can redistribute it and/or modify
-- it under the terms of the GNU Affero General Public License as
-- published by the Free Software Foundation, either version 3 of the
-- License, or (at your option) any later version.
--
-- See the GNU Affero General Public License for more details:
-- <https://www.gnu.org/licenses/agpl-3.0.html>.

-- The maximum stream_ordering in the room when the unsubscription was made.
alter table thread_subscriptions
	add column unsubscribed_at_stream_ordering bigint;

-- The maximum topological_ordering in the room when the unsubscription was made.
alter table thread_subscriptions
	add column unsubscribed_at_topological_ordering bigint;
